syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.common.response.proto.v1";

import 'google/protobuf/any.proto';

message CommerceResponse {
  oneof commerceResponse {
    SuccessResponse success = 1;
    ErrorResponse error = 2;
  }
}

message SuccessResponse {
  repeated google.protobuf.Any data = 1;
  string message = 2;
}

message ErrorResponse {
  int32 code = 1;
  string message = 2;
}