syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.inventory.proto.v1";

import "response-common.proto";
import "inventory-common.proto";

service InventoryManagementService {
  rpc addInventoryUnit(stream InventoryUnit) returns (stream CommerceResponse);
  rpc removeInventoryUnit(stream InventoryUnit) returns (stream CommerceResponse);
}

service InventoryAvailabilityService {
  rpc checkAvailability(InventoryOrder) returns (CommerceResponse);
}